--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run tests
-        run: npm test:coverage
+        run: npm run test:coverage
       - name: Collect coverage
         uses: codecov/codecov-action@v3
         if: success()
